--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
       "packages/*"
     ]
   },
+  "scripts": {
+    "test": "jest"
+  },
   "author": "Nurielly Caroline Brizola <nurycaroline@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^4.0.2",
-    "@monorepo/eslint-config": "*"
+    "@monorepo/eslint-config": "*",
+    "@types/jest": "^26.0.10",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.3.0",
+    "typescript": "^4.0.2"
   }
 }
