Cricao de pacota para interfaces

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "@monorepo/interfaces": "*"
   },
   "devDependencies": {
     "@types/express": "^4.17.7"
