--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,10 +3,22 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "script": "tsc",
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpileOnly --ignore-watch node_modules src/shared/infra/http/server.ts",
+    "start": "ts-node src/shared/infra/http/server.ts",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "test": "jest",
+    "dev": "nodemon --watch \"src\" --exec \"ts-node src/index.ts\" -e ts"
+  },
   "dependencies": {
+    "@monorepo/interfaces": "*",
+    "@types/cors": "^2.8.7",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "@monorepo/interfaces": "*"
+    "nodemon": "^2.0.4",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.7"
