Configurando o Alias e Import helper

--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -9,6 +9,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@monorepo/api-rest": "*",
+    "module-resolver": "^1.0.0",
     "react": "16.13.1",
     "react-native": "0.63.2"
   },
