--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
+    "react-hook-form": "^6.8.2",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
   },
