--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --mode development"
+    "dev": "webpack-dev-server --mode development"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.11.5",
