--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,6 +10,7 @@
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@monorepo/api-rest": "*",
     "@monorepo/interfaces": "*",
+    "module-resolver": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "swr": "^0.3.2"
