--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -1,10 +1,31 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "lib": ["esnext", "dom"],   
-    "allowJs": false,          
-    "checkJs": false,         
-    "jsx": "react"
+    "lib": [
+      "esnext",
+      "dom"
+    ],
+    "allowJs": false,
+    "checkJs": false,
+    "jsx": "react",
+    "baseUrl": "./src",
+    "paths": {
+      "@components/*": [
+        "components/*"
+      ],
+      "@pages/*": [
+        "pages/*"
+      ],
+      "@hooks/*": [
+        "hooks/*"
+      ],
+      "@assets/*": [
+        "assets/*"
+      ],
+      "@routes/*": [
+        "routes/*"
+      ]
+    },
   },
   "include": [
     "./src/**/*"
